--- a/finger_statistics/main.ipynb
+++ b/finger_statistics/main.ipynb
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_folder_path = \"input/qwerty\" # folder of .json files\n",
+    "input_folder_path = \"input/salvo\" # folder of .json files\n",
     "needed_keys = r\"^[a-zA-Z]$\" # only letters"
    ]
   },
