--- a/finger_statistics/jsonInput.ipynb
+++ b/finger_statistics/jsonInput.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,11 +49,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_folder_path = \"input/typheA\" # folder of .json files\n",
+    "file_input = \"typheB\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_folder_path = \"input/\" + file_input # folder of .json files\n",
     "needed_keys = r\"^[a-zA-Z]$\" # only letters"
    ]
   },
@@ -67,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,34 +145,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for finger in fingers:\n",
-    "    # get count of each letter\n",
-    "    letter_count = {}\n",
+    "# for finger in fingers:\n",
+    "#     # get count of each letter\n",
+    "#     letter_count = {}\n",
     "\n",
-    "    for letter in fingers[finger]:\n",
-    "        if letter not in letter_count:\n",
-    "            letter_count[letter] = 1\n",
-    "        else:\n",
-    "            letter_count[letter] += 1\n",
+    "#     for letter in fingers[finger]:\n",
+    "#         if letter not in letter_count:\n",
+    "#             letter_count[letter] = 1\n",
+    "#         else:\n",
+    "#             letter_count[letter] += 1\n",
     "\n",
-    "    letter_with_lowest_count = min(letter_count, key = lambda k: letter_count[k])\n",
+    "#     letter_with_lowest_count = min(letter_count, key = lambda k: letter_count[k])\n",
     "\n",
-    "    # divide each letter count by the lowest letter count and rounded up\n",
-    "    for letter in letter_count:\n",
-    "        letter_count[letter] = math.ceil(letter_count[letter] / letter_count[letter_with_lowest_count])\n",
+    "#     # divide each letter count by the lowest letter count and rounded up\n",
+    "#     for letter in letter_count:\n",
+    "#         letter_count[letter] = math.ceil(letter_count[letter] / letter_count[letter_with_lowest_count])\n",
     "        \n",
-    "    # replace the logs with the shorter but similarly proportioned log\n",
-    "    new_log = \"\"\n",
+    "#     # replace the logs with the shorter but similarly proportioned log\n",
+    "#     new_log = \"\"\n",
     "\n",
-    "    for letter in letter_count:\n",
-    "        for count in range(letter_count[letter]):\n",
-    "            new_log += letter\n",
+    "#     for letter in letter_count:\n",
+    "#         for count in range(letter_count[letter]):\n",
+    "#             new_log += letter\n",
     "\n",
-    "    fingers[finger] = (new_log)"
+    "#     fingers[finger] = (new_log)"
    ]
   },
   {
@@ -178,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,6 +205,56 @@
     "### Generating the heat maps\n",
     "\n",
     "Use the text files in the output folder to generate the heat maps [here](https://oha-ohashi.github.io/2022_1/a_ortho/ortho_heat.html)."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Getting the finger frequency proportions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Proportions:\n",
+      "left_index.txt: 34.25%\n",
+      "left_middle.txt: 8.21%\n",
+      "left_pinky.txt: 4.84%\n",
+      "left_ring.txt: 9.04%\n",
+      "right_index.txt: 27.42%\n",
+      "right_middle.txt: 9.33%\n",
+      "right_pinky.txt: 0.21%\n",
+      "right_ring.txt: 6.70%\n"
+     ]
+    }
+   ],
+   "source": [
+    "output_folder_path = \"output/\"\n",
+    "output_files = os.listdir(output_folder_path)\n",
+    "\n",
+    "needed_output_files = [file for file in output_files if file.startswith(file_input)]\n",
+    "\n",
+    "combined_output = \"\"\n",
+    "\n",
+    "for file in needed_output_files:\n",
+    "    file_path = os.path.join(output_folder_path, file)\n",
+    "    with open(file_path, 'r') as file:\n",
+    "        combined_output += file.read()\n",
+    "\n",
+    "print(\"Proportions:\")\n",
+    "\n",
+    "for file in needed_output_files:\n",
+    "    file_path = os.path.join(output_folder_path, file)\n",
+    "    with open(file_path, 'r') as file:\n",
+    "        print(file_path.replace(\"output/\" + file_input + \"_\", \"\") + \": \" + str(\"{:.2f}\".format(len(file.read()) / len(combined_output) * 100)) + \"%\")\n"
    ]
   }
  ],
